# cmake_trivial_2023

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: tests.yml
src/: bin_math.cc  lib.h  lib_add.cc  lib_mul.cc  test_add.cc  test_current.cc  test_hw.cc  test_math.cc  test_mul.cc
